--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -4,8 +4,8 @@
 <head>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link href="styles.css" rel="stylesheet">
-<script src="index.js" defer="defer"></script>
+<link href="/styles.css" rel="stylesheet">
+<script src="/index.js" defer="defer"></script>
 <script src="https://cdn.glitch.com/56b60005-30df-4a91-85e4-899f6c611814%2FEventEmitter.min.js?1548841446892"></script>
 <script src="https://cdn.glitch.com/56b60005-30df-4a91-85e4-899f6c611814%2FWSClient.js?1548841434242" defer="defer"></script>
 <title>SilverBot Web Dashboard</title>
@@ -23,23 +23,22 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Logs</a>
+        <a class="nav-link" href="/logs">Logs</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Control Panel</a>
+        <a class="nav-link" href="/panel">Control Panel</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Report an Issue</a>
+        <a class="nav-link" href="/issues">Report an Issue</a>
       </li>
     </ul>
   </div>
 </nav><br>
 <center><h1>Web Dashboard</h1>
-<br><h2>Status: <span id="status"></span></h2><br><br>
-<div class="box"></div>
+<br><h2>Status: <span id="status"></span></h2>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
