--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -4,17 +4,18 @@
 <head>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link href="/styles.css" rel="stylesheet">
-<script src="/index.js" defer="defer"></script>
+<link href="styles.css" rel="stylesheet">
+<link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
 <script src="https://cdn.glitch.com/56b60005-30df-4a91-85e4-899f6c611814%2FEventEmitter.min.js?1548841446892"></script>
 <script src="https://cdn.glitch.com/56b60005-30df-4a91-85e4-899f6c611814%2FWSClient.js?1548841434242" defer="defer"></script>
+<script src="index.js" defer="defer"></script>
 <title>SilverBot Web Dashboard</title>
 </head>
 <body>
 <div class="container">
 <nav class="navbar navbar-expand-lg navbar-light">
   <a class="navbar-brand" href="#">
-  <img src="https://media.discordapp.net/attachments/473401307701706753/534923986107105300/650760583e29614eb702bd34ba46fbcd.png" width="30" height="30" class="d-inline-block align-top rounded-circle" alt="">
+  <img src="https://media.discordapp.net/attachments/473401307701706753/534923986107105300/650760583e29614eb702bd34ba46fbcd.png" width="30" height="30" class="d-inline-block align-middle rounded-circle" alt="">
   SilverBot
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,5 +44,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/bootstrap-material-design@4.1.1/dist/js/bootstrap-material-design.js" integrity="sha384-CauSuKpEqAFajSpkdjv3z9t8E7RlpJ1UP0lKM/+NdtSarroVKu069AlsRPKkFBz9" crossorigin="anonymous"></script>
+<script>$(document).ready(function() { $('body').bootstrapMaterialDesign(); });</script>
 </body>
 </html>
