--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link href="styles.css" rel="stylesheet">
 <link rel="stylesheet" href="https://unpkg.com/bootstrap-material-design@4.1.1/dist/css/bootstrap-material-design.min.css" integrity="sha384-wXznGJNEXNG1NFsbm0ugrLFMQPWswR3lds2VeinahP8N0zJw9VWSopbjv2x7WCvX" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://cdn.glitch.com/56b60005-30df-4a91-85e4-899f6c611814%2FEventEmitter.min.js?1548841446892"></script>
 <script src="https://cdn.glitch.com/56b60005-30df-4a91-85e4-899f6c611814%2FWSClient.js?1548841434242" defer="defer"></script>
 <script src="index.js" defer="defer"></script>
